--- a/src/assets/default.scss
+++ b/src/assets/default.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 body{
     font-family: 'Oswald';
+    overflow-x: hidden;
 }
 *{
     margin: 0;
