--- a/src/assets/_banner.scss
+++ b/src/assets/_banner.scss
@@ -83,14 +83,17 @@
         flex-direction: column-reverse;
     }
     .banner-right{
-        position: relative;
-        right: 70px;
-        max-height: 0;
-        z-index: 2;
-        margin-bottom: 200px;
+        // position: relative;
+        // right: 70px;
+        // max-height: 0;
+        // z-index: 2;
+        margin-top: 200px;
     }
     .banner-left{
         margin-left: 200px;
+    }
+    .banner-left img {
+        display: none;
     }
     
 }
