--- a/src/assets/_header.scss
+++ b/src/assets/_header.scss
@@ -1,5 +1,7 @@
+
 .header{
     width: 100%;
+    height: 120px;
     position: fixed;
     z-index: 99;
     background-color: white;
@@ -10,7 +12,7 @@
         margin-top: 30px;
         display: flex;
         justify-content: space-evenly;
-        align-items: center;
+           align-items: center;
     }
     &__nav{
         display: flex;
@@ -60,7 +62,7 @@
     align-items: center;
     border-radius: 50%;
 }
-.header-button button{
+.header-button a{
     box-shadow: 0px 2px 3px rgba(0, 11, 48, 0.25);
 
     padding: 10px 20px;
@@ -69,69 +71,78 @@
     background-color: transparent;
     color: black;
 }
-.header-button button:hover{
+.header-button a:hover{
     background-color: #ffc107;
     transition: 0.25s ease-in-out;
 }
-
 .brg-menu{
-    transform: translateX(100%);
-    // opacity: 0;
-    width: 100px;
-    height: 300px;
-    position: absolute;
-    top: 50px;
-    transition: all 0.25s ease-in-out;
+    opacity: 0;
 }
-
-.brg{
-    display: none;
-    
+.hamburger-react{
+    opacity: 0;
 }
-    @media screen and (max-width:1000px) {
+.logotype{
+    opacity: 0;
+}
+@media screen and (max-width:1000px) {
+    .brg{
+        display: none;
+        
+    }
+    .hamburger-react{
+        opacity: 1;
+    }
+    .logotype{
+        opacity: 1;
+    }
+    .brg-menu{
+            transform: translateX(100%);
+            opacity: 0;
+            position: absolute;
+            top: 50px;   
+            width: 100vh;
+            height: 100vh;
+            transition: all 0.25s ease-in-out;
+        }
         .header__item{
             display: none;
         }
         .header{
             display: flex;
-            align-items: center;
+            // align-items: center;
             height: 50px;
-            background-color: gainsboro;
-            justify-content: end;
-        }
-        .brg{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            // justify-content: end;
-            gap: 6px;
-            background-color: transparent;
-            border: none;
-            // row-gap: 10px;
-        }
-        .brg div {
-            width: 25px;
-            height: 4.5px;
-            background-color: black;
-            border-radius: 2px;
-            color: black;
+            background-color: #ffde00;
+            justify-content: space-between;
         }
         .brg-menu.active{
             overflow-x: hidden;
             transition: all 0.25s ease-in-out;
-            // opacity: 1;
+            opacity: 1;
             transform: translateX(0);
             position: absolute;
             top: 50px;
-            width: 100vh;
-            height: 100vh;
+            
+            width: 1000px;
+            height: 500px;
             display: flex;
-            background-color: gainsboro;
+            background-color:white;
+            // backdrop-filter: blur(10px);
         }
+        .brg-menu_item{
+            width: 1000px;
+            height: 500px;
+            display: flex;
+            text-align: center;
+            align-items: center;
+            position: relative;
+            bottom:100px;
+            left: 250px;
+        }
+        .nav-brg{
+            display: flex;
+            flex-direction: column;
+        }
+        
     }
-    // .brg:active{
-    //     &div:last-child{
-    //         display: none;
-    //     }
-    // }
+
     
