--- a/src/assets/_footer.scss
+++ b/src/assets/_footer.scss
@@ -66,5 +66,12 @@ ul{
 
 }
 
+@media screen and (max-width:400px) {
+    .footer-item{
+        width: 400px;
+        margin: 0 auto;
+    }
+    
+}
 
 
