--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,3 +3,6 @@
 @import './banner';
 @import './layout';
 @import './footer';
+// @import"https://cdn.jsdelivr.net/gh/Alaev-Co/snowflakes/dist/snow.min.css";
+
+
