--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -57,3 +57,9 @@
         justify-content: center;
     }
 }
+
+@media screen and (max-width:400px) {
+    .layout-right{
+        display: none;
+    }
+}
