--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -62,4 +62,28 @@
     .layout-right{
         display: none;
     }
+    .layout-left{
+        width: 400px;
+        padding: 10px;
+        height: 400px;
+    }
+    .layout-box{
+        margin: 0;
+        padding: 0;
+        border-radius: 100px;
+        width: 350px;
+        // height: 450px;
+    }
+    .layout-box h1{
+        margin-bottom: 20px;
+        font-size: 17px;
+    }
+    .layout-box span {
+        margin-top: 20px;
+        font-size: 14px;
+        font-weight: 500;
+    }
+    .layout-box h3{
+        font-size: 16.5px;
+    }
 }
